RESOLVED FIXED310771
[YARR] Fix JIT crash on non-greedy ParenthesesSubpattern backtracking
https://bugs.webkit.org/show_bug.cgi?id=310771
Summary [YARR] Fix JIT crash on non-greedy ParenthesesSubpattern backtracking
Yusuke Suzuki
Reported 2026-03-25 22:41:20 PDT
...
Attachments
Yusuke Suzuki
Comment 1 2026-03-25 22:41:21 PDT
Yusuke Suzuki
Comment 2 2026-03-25 22:59:25 PDT
roberto_rodriguez2
Comment 3 2026-03-26 15:12:31 PDT
EWS
Comment 4 2026-03-27 15:57:01 PDT
Committed 310115@main (37465a721d7a): <https://commits.webkit.org/310115@main> Reviewed commits have been landed. Closing PR #61378 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.