[YARR] Fix JIT crash on non-greedy ParenthesesSubpattern backtracking https://bugs.webkit.org/show_bug.cgi?id=310771 rdar://173140757

Reviewed by NOBODY (OOPS!).

When a FixedCount parentheses group backtracks, restoreParenContext
restores all frame slots including nested groups' BackTrackInfo. If a
nested NonGreedy multi-alternative group matched 0 iterations during
the saved snapshot, its returnAddress frame slot was never written by
NestedAlternativeBegin/Next/End. The uninitialized value was then
saved to the ParenContext and later restored, causing a PAC failure
(or SEGV on non-PAC hardware) when NestedAlternativeEnd.bt jumped to
the garbage pointer via loadFromFrameAndJump.

Fix by initializing the returnAddress frame slot to null in
ParenthesesSubpatternBegin forward, and adding a guard at
NestedAlternativeEnd.bt to bail to the interpreter if the
returnAddress is null. Also add a null check on parenContextHead
in the Greedy/NonGreedy BEGIN.bt path, which was similarly
unprotected when frame state was restored by an enclosing group.

Test: JSTests/stress/regexp-fixedcount-nested-nongreedy-multi-alt.js

* JSTests/stress/regexp-fixedcount-nested-nongreedy-multi-alt.js: Added.
(shouldBe):
(r):
* Source/JavaScriptCore/yarr/YarrJIT.cpp: